[Android] chat voice room inside UI

--- a/Android/scenes/show/src/main/res/layout/show_room_list_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_room_list_activity.xml
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:src="@mipmap/bg_mobile_pre"
-        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_bias="0.3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -79,7 +79,7 @@
         android:layout_marginHorizontal="20dp"
         android:gravity="center"
         android:text="@string/show_create_tips1"
-        android:textColor="@color/def_text_color_3c4"
+        android:textColor="@color/def_text_grey_6F7"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
