--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_list.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_list.xml
@@ -67,7 +67,7 @@
         android:id="@+id/ivBgMobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_bias="0.3"
         android:src="@mipmap/bg_mobile_pre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:layout_marginHorizontal="16dp"
         android:gravity="center"
         android:text="@string/ktv_singbattle_create_tips4"
-        android:textColor="@color/def_text_color_3c4"
+        android:textColor="@color/def_text_grey_6F7"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
