--- a/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_fragment_room_list_layout.xml
+++ b/Android/scenes/voice_spatial/src/main/res/layout/voice_spatial_fragment_room_list_layout.xml
@@ -45,7 +45,7 @@
         android:id="@+id/ivBgMobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintVertical_bias="0.4"
+        app:layout_constraintVertical_bias="0.3"
         android:src="@mipmap/bg_mobile_pre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:layout_marginHorizontal="16dp"
         android:gravity="center"
         android:text="@string/voice_chat_room_list_tips"
-        android:textColor="@color/def_text_color_3c4"
+        android:textColor="@color/def_text_grey_6F7"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
