--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_living.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_activity_room_living.xml
@@ -8,93 +8,116 @@
     android:background="@mipmap/ktv_room_bg"
     tools:context=".live.RoomLivingActivity">
 
-<!--    <androidx.appcompat.widget.AppCompatImageView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:scaleType="centerCrop"-->
-<!--        android:src="@mipmap/ktv_room_bg" />-->
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvRoomName"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tbChatroomTop"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:drawableStart="@mipmap/ic_k"
-        android:drawablePadding="5dp"
         android:gravity="center_vertical"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:contentInsetStart="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="房间名称" />
+        app:title="">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvRoomMCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        android:text="当前在线人数：1"
-        android:textColor="@color/def_text_grey_979"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/tvRoomName"
-        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clRoomTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/ktv_singbattle_detail_top_view_bg"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivExit"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        android:layout_marginEnd="20dp"
-        android:background="@drawable/bg_full_black_r50"
-        android:padding="7dp"
-        android:src="@mipmap/ic_off"
-        app:layout_constraintBottom_toBottomOf="@id/tvRoomName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tvRoomName" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/ivOwnerAvatar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@mipmap/portrait01"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearance="@style/ktv_singbattle_ui_widget_roundStyle"
+                app:strokeColor="@android:color/transparent"
+                tools:src="@mipmap/portrait01" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivMore"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        android:paddingVertical="8dp"
-        android:layout_marginEnd="4dp"
-        app:layout_constraintTop_toTopOf="@id/ivExit"
-        app:layout_constraintEnd_toStartOf="@id/ivExit"
-        app:layout_constraintBottom_toBottomOf="@id/ivExit"
-        android:src="@mipmap/icon_more" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvRoomName"
+                android:layout_width="154dp"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:paddingHorizontal="8dp"
+                android:singleLine="true"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:layout_constraintStart_toEndOf="@id/ivOwnerAvatar"
+                app:layout_constraintTop_toTopOf="@id/ivOwnerAvatar"
+                tools:text="房间名称房间名称房间名称房间名称房间名称" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvNetStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="21dp"
-        android:text="@string/ktv_singbattle_net_status_good"
-        android:textColor="@color/def_text_grey_979"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@id/ivMore"
-        app:layout_constraintEnd_toStartOf="@id/ivMore"
-        app:layout_constraintTop_toTopOf="@id/ivMore"
-        tools:ignore="SmallSp" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvRoomMCount"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:singleLine="true"
+                android:textColor="@color/white_80_percent"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@id/tvRoomName"
+                app:layout_constraintTop_toBottomOf="@id/tvRoomName"
+                tools:text="66在线" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivNetStatus"
-        android:layout_width="6dp"
-        android:layout_height="6dp"
-        android:layout_marginEnd="6dp"
-        android:src="@drawable/bg_round_green"
-        app:layout_constraintBottom_toBottomOf="@id/tvNetStatus"
-        app:layout_constraintEnd_toStartOf="@id/tvNetStatus"
-        app:layout_constraintTop_toTopOf="@id/tvNetStatus" />
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="1dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="5dp"
+                android:orientation="vertical"
+                app:dividerColor="@color/white_80_percent"
+                app:layout_constraintBottom_toBottomOf="@id/tvRoomMCount"
+                app:layout_constraintStart_toEndOf="@+id/tvRoomMCount"
+                app:layout_constraintTop_toTopOf="@id/tvRoomMCount" />
 
-<!--    <androidx.appcompat.widget.AppCompatImageView-->
-<!--        android:id="@+id/bgRoom"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="232dp"-->
-<!--        android:layout_marginHorizontal="15dp"-->
-<!--        android:layout_marginTop="24dp"-->
-<!--        android:minWidth="345dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />-->
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivNetStatus"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/bg_round_green"
+                app:layout_constraintBottom_toBottomOf="@id/tvNetStatus"
+                app:layout_constraintEnd_toStartOf="@id/tvNetStatus"
+                app:layout_constraintTop_toTopOf="@id/tvNetStatus" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvNetStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="22dp"
+                android:text="@string/ktv_singbattle_net_status_good"
+                android:textColor="@color/white_80_percent"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@id/tvRoomMCount"
+                app:layout_constraintTop_toBottomOf="@id/tvRoomName" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivExit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:paddingVertical="16dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="16dp"
+            android:src="@mipmap/icon_close" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="16dp"
+            android:src="@mipmap/icon_more" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <io.agora.scene.ktv.singbattle.widget.game.SingBattleGameView
         android:id="@+id/singBattleGameView"
@@ -104,7 +127,7 @@
         app:layout_constraintBottom_toTopOf="@id/rvUserMember"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRoomMCount" />
+        app:layout_constraintTop_toBottomOf="@id/tbChatroomTop" />
 
     <io.agora.scene.ktv.singbattle.widget.lrcView.LrcControlView
         android:id="@+id/lrcControlView"
@@ -116,7 +139,7 @@
         app:layout_constraintBottom_toTopOf="@id/rvUserMember"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRoomName" />
+        app:layout_constraintTop_toBottomOf="@id/tbChatroomTop" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUserMember"
@@ -140,7 +163,7 @@
         android:layout_marginBottom="15dp"
         android:button="@null"
         android:checked="true"
-        android:drawableStart="@drawable/bg_cb_mic_status"
+        android:background="@drawable/ktv_cb_mic_status"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -152,7 +175,7 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="15dp"
         android:button="@null"
-        android:drawableStart="@drawable/bg_cb_video_status"
+        android:background="@drawable/ktv_cb_camera_status"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cbMic" />
