--- a/Android/scenes/show/src/main/res/layout/show_live_detail_fragment.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_fragment.xml
@@ -62,5 +62,12 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
+    <include
+        android:id="@+id/livingComeSoonLayout"
+        layout="@layout/show_room_come_soon_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
