--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_mic_manager.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_mic_manager.xml
@@ -6,12 +6,12 @@
     android:layout_height="wrap_content"
     android:background="@drawable/voice_bg_rect_top_radius20_white">
 
-
     <View
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/voice_bg_rect_top_radius20_gradient_white"
-        app:layout_constraintTop_toTopOf="@+id/ivBottomSheetTitle" />
+        app:layout_constraintTop_toTopOf="@+id/ivBottomSheetTitle"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivBottomSheetTitle"
@@ -22,7 +22,8 @@
         android:src="@drawable/voice_icon_room_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivMicInfo"
@@ -34,17 +35,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearance="@style/voice_seat_roundStyle" />
+        app:shapeAppearance="@style/voice_seat_roundStyle"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMicInnerIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/voice_icon_room_mic_add"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:src="@drawable/voice_ic_mic_empty"
         app:layout_constraintBottom_toBottomOf="@+id/ivMicInfo"
         app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
         app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
-        app:layout_constraintTop_toTopOf="@+id/ivMicInfo" />
+        app:layout_constraintTop_toTopOf="@+id/ivMicInfo"
+        />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMicTag"
@@ -53,7 +56,8 @@
         android:src="@drawable/voice_icon_room_mic_mute_tag"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/ivMicInfo"
-        app:layout_constraintEnd_toEndOf="@id/ivMicInfo" />
+        app:layout_constraintEnd_toEndOf="@id/ivMicInfo"
+        />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtMicUsername"
@@ -68,7 +72,8 @@
         app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
         app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
         app:layout_constraintTop_toBottomOf="@+id/ivMicInfo"
-        tools:text="Susan Stark" />
+        tools:text="Susan Stark"
+        />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtChatroomMicTag"
@@ -84,7 +89,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo"
+        />
 
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="0dp"
@@ -95,7 +101,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvChatroomMicManager"
@@ -109,5 +116,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo" />
+        app:layout_constraintTop_toBottomOf="@+id/ivMicInfo"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
