--- a/Android/scenes/voice/src/main/res/layout/voice_view_room_2d_mic.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_view_room_2d_mic.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="5dp">
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivMicInfo"
         android:layout_width="58dp"
         android:layout_height="58dp"
@@ -16,16 +16,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearance="@style/voice_seat_roundStyle" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivMicInnerIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/voice_icon_room_mic_add"
-        app:layout_constraintBottom_toBottomOf="@+id/ivMicInfo"
-        app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
-        app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
-        app:layout_constraintTop_toTopOf="@+id/ivMicInfo" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/ivMicBotFloat"
@@ -39,6 +29,16 @@
         app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
         app:layout_constraintTop_toTopOf="@+id/ivMicInfo"
         app:shapeAppearance="@style/voice_seat_roundStyle" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivMicInnerIcon"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:src="@drawable/voice_ic_mic_empty"
+        app:layout_constraintBottom_toBottomOf="@+id/ivMicInfo"
+        app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
+        app:layout_constraintStart_toStartOf="@+id/ivMicInfo"
+        app:layout_constraintTop_toTopOf="@+id/ivMicInfo" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/mtMicRotActive"
@@ -73,7 +73,7 @@
         android:drawablePadding="2dp"
         android:ellipsize="end"
         android:gravity="center"
-        android:textColor="@color/voice_white"
+        android:textColor="#AEABD0"
         android:textSize="@dimen/voice_sp_11"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="@+id/ivMicInfo"
