[Android]fix outside UI bugs

--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"
-            tools:background="@color/ktv_music_view_bg"
+            android:background="@color/ktv_music_view_bg"
             tools:visibility="visible">
 
             <TextView
