--- a/Android/app/src/main/res/layout/app_fragment_home_index.xml
+++ b/Android/app/src/main/res/layout/app_fragment_home_index.xml
@@ -11,10 +11,11 @@
         android:id="@+id/tabLayout"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
+        android:paddingHorizontal="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:tabGravity="start"
         app:tabIndicatorHeight="0dp"
-        app:tabMode="scrollable"
+        app:tabMode="fixed"
         app:layout_constraintStart_toStartOf="parent"
         app:tabRippleColor="@android:color/transparent"
         app:tabSelectedTextColor="@color/black"
