--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ktv_music_view_bg"
+    tools:background="@color/ktv_music_view_bg"
     tools:layout_height="280dp"
     tools:theme="@style/Theme.MaterialComponents.Light">
 
