--- a/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/ktv_room_bg"
+    android:clipToPadding="false"
+    android:clipChildren="false"
     tools:context=".live.RoomLivingActivity">
 
     <androidx.appcompat.widget.Toolbar
@@ -135,6 +137,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginBottom="12dp"
         android:overScrollMode="never"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/lrcControlView"
         app:layout_constraintBottom_toBottomOf="parent"
