--- a/Android/scenes/voice/src/main/res/layout/voice_item_room_2d_bot_mic.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_item_room_2d_bot_mic.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/superLayout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <View
         android:id="@+id/micRotOutBg"
@@ -18,6 +20,8 @@
         android:id="@+id/micBlueBot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/glVertical50"
@@ -43,6 +47,8 @@
         android:id="@+id/micBlueRed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/glVertical50"
