--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_debug_options.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_singbattle_dialog_debug_options.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_full_blue_top_20"
@@ -11,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Debug Settings"
+        android:text="@string/ktv_singbattle_debug_settings"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -25,9 +24,33 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvChannelName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="音频dump"
+            android:text="channelName:"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvSDKVersion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="agora sdk ver: "
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ktv_singbattle_debug_settings_audio_dump"
             android:textColor="@color/def_text_grey_979" />
 
         <androidx.appcompat.widget.AppCompatCheckBox
@@ -37,12 +60,6 @@
             android:layout_marginStart="35dp"
             android:button="@drawable/cb_def_selector" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="audio dump"
-            android:textColor="@color/def_text_grey_6c7" />
     </LinearLayout>
 
     <LinearLayout
@@ -56,7 +73,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="打分难度"
+            android:text="@string/ktv_singbattle_debug_settings_scoring_difficulty"
             android:textColor="@color/def_text_grey_979" />
 
         <androidx.appcompat.widget.AppCompatSeekBar
@@ -79,7 +96,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="打分补偿"
+            android:text="@string/ktv_singbattle_debug_settings_scoring_compensation"
             android:textColor="@color/def_text_grey_979" />
 
         <androidx.appcompat.widget.AppCompatSeekBar
@@ -103,64 +120,36 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ktv_singbattle_music_menu_dialog_mv"
+            android:text="@string/ktv_singbattle_debug_settings_private_param"
             android:textColor="@color/def_text_grey_979" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/switchMV"
+        <EditText
+            android:id="@+id/etParms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:button="@drawable/cb_def_selector" />
+            android:layout_marginStart="20dp"
+            android:text="Input Key"
+            android:textColor="@color/def_text_grey_979"
+            />
 
+        <EditText
+            android:id="@+id/etParmsNum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="Input Value"
+            android:textColor="@color/def_text_grey_979"
+            />
+
+        <Button
+            android:id="@+id/btSetParams"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:alpha="0.3"
+            android:text="@string/ktv_singbattle_debug_settings_set"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="false"
-            android:focusable="false"
-            android:text="@string/ktv_singbattle_music_menu_dialog_tone"
-            android:textColor="#9BA2AB" />
-
-        <ImageButton
-            android:id="@+id/btn_tone_down_dialog_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="23dp"
-            android:background="@null"
-            android:contentDescription="@string/ktv_singbattle_tone_down"
-            android:padding="6dp"
-            android:src="@drawable/ic_tone_down" />
-
-        <io.agora.scene.widget.CustomVolumeSeekBarView
-            android:id="@+id/changeToneView"
-            android:layout_width="180dp"
-            android:layout_height="28dp"
-            android:layout_marginBottom="3dp"
-            android:clickable="false"
-            android:focusable="false"
-            tools:text="0" />
-
-        <ImageButton
-            android:id="@+id/btn_tone_up_dialog_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:contentDescription="audio dump"
-            android:padding="6dp"
-            android:src="@drawable/ic_tone_up" />
-    </LinearLayout>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
