--- a/Android/scenes/ktv_singbattle/src/main/res/drawable/ktv_singbattle_btn.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/drawable/ktv_singbattle_btn.xml
@@ -4,12 +4,12 @@
     <!--按压效果-->
     <item
         android:state_pressed="true"
-        android:background="@mipmap/ktv_start_grasp_waiting">
+        android:background="@mipmap/ktv_singbattle_start_grasp_waiting">
     </item>
 
     <!--正常效果-->
     <item
         android:state_pressed="false"
-        android:drawable="@mipmap/ktv_start_grasp">
+        android:drawable="@mipmap/ktv_singbattle_start_grasp">
     </item>
 </selector>
