--- a/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
+++ b/Android/scenes/showTo1v1/src/main/res/layout/show_to1v1_room_list_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/show_to1v1_bg">
+    android:background="@mipmap/bg_app_def_white">
 
     <include
         android:id="@+id/emptyInclude"
@@ -24,7 +24,7 @@
         android:id="@+id/title_view"
         style="@style/title_view"
         app:ctv_centerText="@string/show_to1v1_name"
-        app:ctv_rightImageSrc="@drawable/show_to1v1_room_list_refresh_dark"
+        app:ctv_rightImageSrc="@drawable/show_to1v1_room_list_refresh"
         tools:ignore="MissingConstraints" />
 
     <io.agora.scene.showTo1v1.ui.view.RoomListGuideView
@@ -33,26 +33,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:id="@+id/layoutCreateRoom2"
-        android:layout_width="175dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="63dp"
-        android:background="@drawable/bg_def_button_solid"
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btnCreateRoom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:orientation="horizontal"
+        android:scaleType="fitXY"
+        android:backgroundTint="@android:color/transparent"
+        android:src="@drawable/show_to1v1_img_room_list_create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableStart="@mipmap/icon_create_room"
-            android:drawablePadding="5dp"
-            android:text="@string/show_to1v1_create_room"
-            android:textColor="@color/white" />
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
